# X18-Surface

./: .env  .gitignore  CHANGES.md  Dockerfile  README.md  build.sh  compose.yaml  controller_mapping.py  linter_test.py  requirements.txt  run.sh  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: README.md  black-linter.yaml  build_test.yml  ci.yaml  linter.yml  manual.yml  python_linter.yml
UI/: GUI.py  ROV_X16.py  camera_stream.py  ssh_startup.py
UI/src/: controls.py  main.py
deprecated_nodes/com_pub/: CMakeLists.txt  package.xml
deprecated_nodes/depth_comm/: CMakeLists.txt
deprecated_nodes/surface_imu/: CMakeLists.txt
docs/: README.md  docker_setup.md  publisher.md  ros_setup.md  subscriber.md
frontend/: CMakeLists.txt  README.md  gamepad.py  package.xml  ssh.py  streams.py  test.py
frontend/launch/: surface_launch.py  surface_launch.yaml
frontend/src/: app.py  frontend_handler.py  gamepad.py  log_helper.py  ssh.py
frontend/testing/: working_opencv.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ros/: README.md
ros/controller/: CMakeLists.txt  package.xml
ros/demo_publisher/: CMakeLists.txt  package.xml
ros/demo_publisher/src/: demo_publisher.py
ros/demo_subscriber/: CMakeLists.txt  package.xml
ros/demo_subscriber/src/: demo_subscriber.py  dept_sensor.py  leak_subscriber.py  pi_temp_subscriber.py  temp_subscriber.py  water_temp_subscriber.py
ros/gamepad/: CMakeLists.txt
ros/heartbeat_monitor/: package.xml  (+1 more)
ros/mediamtx_node/: CMakeLists.txt  package.xml
ros/mediamtx_node/src/: mediamtx.yml  mediamtx_node.py
ros/utils/: CMakeLists.txt  package.xml
ros/utils/utils/: heartbeat_helper.py
scripts/: README.md  build.sh  clean.sh  install.sh  install_mediamtx.sh  run.sh
test/: controller_mapping.py  testing_stream.py
ui/: CMakeLists.txt  README.md  package.xml  requirements.txt
ui_sub/: CMakeLists.txt  package.xml  testing_stream.py
(+274 files in other folders)
